Implemented that each microservice obtains its ip

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -9,7 +9,7 @@ defaults
     timeout connect 1000
     timeout client 1000
     timeout server 1000
-
+#TODO: Realizar la distincion de diferentes microservicios
 frontend front.claroconnect.com
     mode tcp
     bind *:80
@@ -32,9 +32,9 @@ backend microservice-nest
     # stick on url_param(room) table microservice-nest
     #TODO: Implement Dynamic Configuration  
     server shard1 nestjs-monorepo-services-mail-app-1:3000 check
-    # server shard2 nestjs-monorepo-services-mail-app-2:3000 check
-    # server shard3 nestjs-monorepo-services-mail-app-3:3000 check
-    # server shard4 nestjs-monorepo-services-mail-app-4:3000 check
-    # server shard5 nestjs-monorepo-services-mail-app-5:3000 check
-    # server shard6 nestjs-monorepo-services-mail-app-6:3000 check
+    server shard2 nestjs-monorepo-services-mail-app-2:3000 check
+    server shard3 nestjs-monorepo-services-mail-app-3:3000 check
+    server shard4 nestjs-monorepo-services-mail-app-4:3000 check
+    server shard5 nestjs-monorepo-services-mail-app-5:3000 check
+    server shard6 nestjs-monorepo-services-mail-app-6:3000 check
 
